# token-oracle

./: .atlas-state.json  .editorconfig  .gitignore  ADAPTERS.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SETUP.md  SUPPORT.md  atlas.config.json  install.py  install.sh  package.json  pyproject.toml  release-please-config.json  uninstall.py
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md
assets/: dash-demo.tape
demo/: record.sh
docs/: SUPERPOWERS-MOVED.md  _meta.json  adapters.md  awesome-claude-code-submission.md  cli.md  configuration.md  getting-started.md  index.md  install.md  integrations.md  live-server-truth.md  live.md  statusline.md  works-with.md
npm/: README.md  package.json
oracle/: __init__.py
plans/: 001-config-validation-never-crash.md  002-docs-drift-sweep.md  003-doctor-real-checks.md  004-atomic-write-hardening.md  005-characterization-tests-core-math.md  006-remove-dead-speculative-api.md  007-dash-portable-clear.md  008-init-clean-subcommands.md  009-release-automation-token.md  010-cache-size-warm-path-investigation.md  011-pin-actions-to-shas.md  012-real-confidence-design-spike.md  013-entry-point-source-discovery.md  014-second-provider-adapter-spike.md  015-snapshot-writethrough.md  016-event-detail-contract-v2.md  017-pricing-cost-engine-presets.md  018-tui-shell-tabs.md  019-past-tab-report.md  020-future-tab-forecast-detail.md  021-init-wizard-config-discovery.md  022-sage-reciprocal-integration.md  023-p90-auto-cap.md  024-explore-scaffold-brief.md  025-explore-teletype-ledger.md  026-explore-night-observatory-gsap.md  027-explore-instrument-panel-motion.md  028-explore-hourglass-webgl.md  029-explore-almanac-swiss.md  030-live-truthfulness-contract.md  031-grok-extractor-evidence-bound.md  032-claude-extractor-row-scoped.md  033-live-probe-orchestration.md  034-dash-fixed-region-scene.md  035-headed-display-lifecycle.md  036-live-real-data-toggle.md  037-claude-fable-row-separation.md  038-grok-usage-modal-extractor.md  039-cap-validation-reject-impossible.md  040-grok-fabrication-hole-remove-generic-pair.md  (+27 more)
tests/: conftest.py  test_adapters.py  test_cache.py  test_capcal.py  test_cli.py  test_colors.py  test_config.py  test_contracts.py  test_dashboard.py  test_engine.py  test_events.py  test_extract_common.py  test_install.py  test_keys.py  test_live_claude_extract.py  test_live_contract.py  test_live_display.py  test_live_fill.py  test_live_grok_extract.py  test_live_grok_usage_modal.py  test_live_overlay.py  test_live_probe.py  (+16 more)
(+110 files in other folders)
