[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "token-oracle"
version = "0.1.2"
description = "Observed-Rate Allowance & Cap-Limit Estimator — provider-agnostic token usage-cap forecaster"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Mateusz Muślewski", email = "10kento10@gmail.com" }]
keywords = ["grok", "claude", "tokens", "usage", "forecast", "rate-limit", "ai-agents"]
dependencies = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "ruff>=0.4",
    "mypy>=1.10",
]
live = [
    "playwright>=1.40",
]

[project.scripts]
token-oracle = "token_oracle.cli.main:main"
oracle = "token_oracle.cli.main:main"

[project.urls]
Homepage = "https://oracle.muslewski.com/"
Repository = "https://github.com/muslewski/token-oracle"
Issues = "https://github.com/muslewski/token-oracle/issues"
Changelog = "https://github.com/muslewski/token-oracle/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["token_oracle"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
